# helpdesk-bot

./: .env.example  .env.test  .gitignore  ALEMBIC_GUIDE.md  ARCHITECTURAL_IMPROVEMENTS.md  AUDIT_REPORT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  REVIEW_RU.md  REVIEW_SUMMARY.md  TESTING.md  UNIVERSITY_IMPROVEMENTS.md  alembic.ini  docker-compose.postgres.yml  docker-compose.yml  init_db_script.py  main.py  migrate_db.py  migrate_university_improvements.py  pyproject.toml  start_webapp.py  support-bot.service
.Jules/: bolt.md  palette.md  sentinel.md
.github/: copilot-instructions.md
.jules/: sentinel.md
alembic/: env.py
core/: config.py  constants.py  logger.py
database/: models.py  setup.py
handlers/: admin.py  telegram.py  vk.py
middlewares/: db.py
services/: faq_service.py  llm_service.py  priority_service.py  scheduler.py  scheduler.py.bak  ticket_service.py  user_service.py  working_hours_service.py
tests/: conftest.py  test_admin_edge_cases.py  test_admin_handlers.py  test_admin_handlers_extended.py  test_daily_id_optimization.py  test_destructive.py  test_faq_service.py  test_fun_handlers.py  test_handlers.py  test_handlers_ux.py  test_handlers_ux_example.py  test_html_injection.py  test_input_validation.py  test_integration_full_workflow.py  test_llm_service.py  test_middleware.py  test_middleware_extended.py  test_my_tickets.py  test_notification_truncation.py  test_postgresql_support.py  test_race_condition.py  test_repositories.py  test_scheduler.py  test_scheduler_extended.py  test_security_sanitization.py  test_services.py  test_smart_gratitude.py  test_webapp.py  (+10 more)
(+14 files in other folders)
