[project]
name = "support-bot"
version = "0.1.0"
description = "Omnichannel Support Bot for Telegram and VK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.22.0",
    "sqlalchemy[asyncio]==2.0.44",
    "aiosqlite==0.21.0",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "choicelib==0.1.5",
    "colorama==0.4.6",
    "frozenlist==1.8.0",
    "greenlet==3.2.4",
    "idna==3.11",
    "magic-filter==1.0.12",
    "msgspec==0.19.0",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "yarl==1.22.0",
    "apscheduler>=3.11.1",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
    "init_db_script.py",
    "migrate_db.py",
    "migrate_university_improvements.py",
    "alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
